--- a/01-basics/04-MeetupTitle/index.html
+++ b/01-basics/04-MeetupTitle/index.html
@@ -7,15 +7,12 @@
   <body>
     <div id="app">
       <div>
-        <label><input type="radio" name="meetupId" value="1" /> 1</label>
-        <label><input type="radio" name="meetupId" value="2" /> 2</label>
-        <label><input type="radio" name="meetupId" value="3" /> 3</label>
-        <label><input type="radio" name="meetupId" value="4" /> 4</label>
-        <label><input type="radio" name="meetupId" value="5" /> 5</label>
-
+        <template v-for="num in 5">
+          <label><input type="radio" name="meetupId" v-model="meetupId" :value="num"/> {{ num }}</label>
+        </template>
         <hr />
 
-        <h3>MEETUP_TITLE</h3>
+        <template v-if="meetup"> <h3>{{ meetup.title }}</h3> </template>
       </div>
     </div>
 
