--- a/01-basics/02-VueCalculator/index.html
+++ b/01-basics/02-VueCalculator/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="col" style="display: flex; flex-direction: column; font-family: emoji">
-          <label><input v-model="operator" type="radio" name="operator" value="sum" checked="checked" /> ➕</label>
+          <label><input v-model="operator" type="radio" name="operator" value="sum" /> ➕</label>
           <label><input v-model="operator" type="radio" name="operator" value="subtract" /> ➖</label>
           <label><input v-model="operator" type="radio" name="operator" value="multiply" /> ✖</label>
           <label><input v-model="operator" type="radio" name="operator" value="divide" /> ➗</label>
