Посмотрел решение преподавателя - понравилось

--- a/01-basics/04-MeetupTitle/index.html
+++ b/01-basics/04-MeetupTitle/index.html
@@ -12,7 +12,7 @@
         </template>
         <hr />
 
-        <template v-if="meetup"> <h3>{{ meetup.title }}</h3> </template>
+        <h3 v-if="meetup">{{ meetup.title }}</h3>
       </div>
     </div>
 
